@@ -52,8 +52,6 @@
 
 #define NSH_MAX_ARGUMENTS     6
 
-#define errno (*get_errno_ptr())
-
 /****************************************************************************
  * Public Types
  ****************************************************************************/
