@@ -44,8 +44,6 @@
  * Definitions
  ****************************************************************************/
 
-#define errno *get_errno_ptr()
-
 /****************************************************************************
  * Public Function Prototypes
  ****************************************************************************/
