@@ -53,8 +53,6 @@
  * Public Functions
  ****************************************************************************/
 
-#define errno *get_errno_ptr()
-
 /****************************************************************************
  * Public Functions
  ****************************************************************************/
