@@ -314,4 +314,6 @@
 
 	* Added a test case to verify the Pascal P-Code interpreter
 	* Added /dev/zero
+	* 'errno' is now defined to be *get_errno_ptr() with no name conflicts
+
 
